[gd_scene load_steps=5 format=3 uid="uid://c5ef80eygg6al"]

[ext_resource type="Script" path="res://Attacks/silver_sword.gd" id="1_hvws3"]
[ext_resource type="AudioStream" uid="uid://dfnchdffp3l0d" path="res://Sounds/swordSlash.mp3" id="2_0lyvy"]
[ext_resource type="Texture2D" uid="uid://dw4bc82p61d3l" path="res://Utility/Weapons/Silver Sword.png" id="2_jkdss"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrxbd"]
size = Vector2(10.6066, 38.1838)

[node name="SilverSword" type="Area2D" groups=["attack"]]
top_level = true
light_mask = 4
visibility_layer = 4
collision_layer = 4
collision_mask = 0
script = ExtResource("1_hvws3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(0.750001, -1.25)
rotation = 0.785398
shape = SubResource("RectangleShape2D_jrxbd")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 5
texture = ExtResource("2_jkdss")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0lyvy")
volume_db = -15.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
